--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -55,6 +55,6 @@
 
   .el-dialog.my-dialog {
     --el-dialog-padding-primary: 0;
-    @apply h-[50%] w-[50%] rounded-md bg-transparent;
+    @apply h-fit w-[50%] rounded-md bg-transparent;
   }
 }
