完成json工具所有功能

--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -70,4 +70,32 @@
       text-align: left;
     }
   }
+
+  .error, .syntax-error {
+    @media (prefers-color-scheme: dark) {
+      background-color: #291E1D !important;
+      border-color: #3D2727 !important;
+    }
+
+    .el-message__content {
+      @media (prefers-color-scheme: dark) {
+        color: #E47470 !important;
+        font-family: Menlo, Consolas, 'Courier New', monospace !important;
+      }
+    }
+  }
+
+    .success {
+      @media (prefers-color-scheme: dark) {
+        background-color: #0A2321 !important;
+        border-color: #29371F !important;
+      }
+  
+      .el-message__content {
+        @media (prefers-color-scheme: dark) {
+          color: #58B99D !important;
+          font-family: Menlo, Consolas, 'Courier New', monospace !important;
+        }
+      }
+    }
 }
