JSON工具添加是否自动换行的选项

--- a/src/renderer/src/assets/main.scss
+++ b/src/renderer/src/assets/main.scss
@@ -7,6 +7,10 @@
     @apply w-2;
   }
 
+  ::-webkit-scrollbar:horizontal {
+    @apply h-2;
+  }
+
   ::-webkit-scrollbar-thumb {
     @apply bg-[rgba(24,188,156,.2)] hover:bg-[rgba(24,188,156,.5)] rounded-md;
   }
